# tuppence

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Untitled.ipynb
docs/: blog.md  build.md  examples.md  internals.md  journal.txt  language.md  todo.md
examples/: collatz.2p  foo.2p  sqrt.2p
examples/ll/: callgraph.dot  cfg.__anon_expr.dot  example1.ll  example2.ll  t.ll
examples/tex/: test.fdb_latexmk  test.fls  test.tex
src/: CMakeLists.txt  TuppenceConfig.h.in
src/archive/: Demo.cpp  Logger.cpp  Logger.h  Method.cpp  Method.h  Value.cpp  runtime.ll
src/common/: AST.h  BuiltinFunction.h  BuiltinSymbol.h  Error.h  FiniteWord.h  Lexer.h  Library.h  List.h  Logger.h  RationalWord.h  Runtime.h  TuppenceMath.h  TuppenceValue.h
src/exe/: CMakeLists.txt  Main.cpp
src/lib/: AST.cpp  CMakeLists.txt  Eval.cpp  Eval.h  Eval2.cpp  Interpreter.cpp  Interpreter.h  KaleidoscopeJIT.h  Lexer.cpp  Parser.cpp  Parser.h
src/llvm/: CMakeLists.txt
src/llvm-minimal/: CMakeLists.txt
src/llvm-minimal/cmake/: config-ix.cmake
src/llvm/cmake/: config-ix.cmake
src/runtime/: BuiltinFunction.cpp  BuiltinSymbol.cpp  CMakeLists.txt  FiniteWord.cpp  Library.cpp  List.cpp  Logger.cpp  RationalWord.cpp  Runtime.cpp  TuppenceMath.cpp  TuppenceValue.cpp
src/test/: CMakeLists.txt  Eval.test.cpp  FiniteWord.test.cpp  Parser.test.cpp  RationalWord.test.cpp  Value.test.cpp
src/tuppence/: CMakeLists.txt  Eval.cpp  Eval.h  FiniteWord.cpp  FiniteWord.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Logger.cpp  Logger.h  Main.cpp  Parser.cpp  Parser.h  RationalWord.cpp  RationalWord.h  Value.cpp  Value.h  ValueList.cpp  ValueList.h
work/: boehmgc  boehmgc.ll  hello  hello.ll  symbols.txt
